--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -162,7 +162,7 @@
 	</div>
 
 	<!-- 尾部 -->
-	<footer class="bg-dark">
+	<footer class="bg-dark" th:fragment="footer">
 		<div class="container">
 			<div class="row">
 				<!-- 二维码 -->
@@ -231,3 +231,4 @@
 <script th:src="@{js/index.js}"></script>
 </body>
 </html>
+
