--- a/src/main/resources/templates/site/setting.html
+++ b/src/main/resources/templates/site/setting.html
@@ -64,7 +64,7 @@
 		<div class="container p-5 mt-3 mb-3">
 			<!-- 上传头像 -->
 			<h6 class="text-left text-info border-bottom pb-2">上传头像</h6>
-			<form class="mt-5" method="post" enctype="multipart/form-data" th:action="@{/user/upload}">
+			<form class="mt-5" method="post" enctype="multipart/form-data" th:action="@{/upload}">
 				<div class="form-group row mt-4">
 					<label for="head-image" class="col-sm-2 col-form-label text-right">选择头像:</label>
 					<div class="col-sm-10">
@@ -87,20 +87,23 @@
 			</form>
 			<!-- 修改密码 -->
 			<h6 class="text-left text-info border-bottom pb-2 mt-5">修改密码</h6>
-			<form class="mt-5">
+			<form class="mt-5" method="post" th:action="@{/user/updatePassword}">
 				<div class="form-group row mt-4">
 					<label for="old-password" class="col-sm-2 col-form-label text-right">原密码:</label>
+
 					<div class="col-sm-10">
-						<input type="password" class="form-control" id="old-password" placeholder="请输入原始密码!" required>
-						<div class="invalid-feedback">
-							密码长度不能小于8位!
+						<input type="password" th:class="|form-control ${errorMsg!=null?'is-invalid':''}|"
+							   th:value="${param.oldPassword}" id="old-password" name="oldPassword" placeholder="请输入原始密码!" required>
+						<div class="invalid-feedback" th:text="${errorMsg}">
+							密码错误!
 						</div>
 					</div>
 				</div>
 				<div class="form-group row mt-4">
 					<label for="new-password" class="col-sm-2 col-form-label text-right">新密码:</label>
 					<div class="col-sm-10">
-						<input type="password" class="form-control" id="new-password" placeholder="请输入新的密码!" required>
+						<input type="password" th:class="form-control"
+							   th:value="${param.newPassword}" id="new-password" name="newPassword" placeholder="请输入新的密码!" required>
 						<div class="invalid-feedback">
 							密码长度不能小于8位!
 						</div>
@@ -109,7 +112,8 @@
 				<div class="form-group row mt-4">
 					<label for="confirm-password" class="col-sm-2 col-form-label text-right">确认密码:</label>
 					<div class="col-sm-10">
-						<input type="password" class="form-control" id="confirm-password" placeholder="再次输入新密码!" required>
+						<input type="password" th:class="|form-control ${newPassword!=null?'is-invalid':''}|"
+							   th:value="${param.newPassword}"id="confirm-password" placeholder="再次输入新密码!" required>
 						<div class="invalid-feedback">
 							两次输入的密码不一致!
 						</div>
@@ -126,7 +130,7 @@
 	</div>
 
 	<!-- 尾部 -->
-	<footer class="bg-dark">
+	<footer class="bg-dark"  th:replace="index::footer">
 		<div class="container">
 			<div class="row">
 				<!-- 二维码 -->
@@ -200,3 +204,5 @@
 </script>
 </body>
 </html>
+
+
