--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,7 +71,7 @@
 						<a class="nav-link" href="#">最热</a>
 					</li>
 				</ul>
-				<button type="button" class="btn btn-primary btn-sm position-absolute rt-0" data-toggle="modal" data-target="#publishModal">我要发布</button>
+				<button type="button" class="btn btn-primary btn-sm position-absolute rt-0" data-toggle="modal" data-target="#publishModal" th:if="${loginUser!=null}">我要发布</button>
 			</div>
 			<!-- 弹出框 -->
 			<div class="modal fade" id="publishModal" tabindex="-1" role="dialog" aria-labelledby="publishModalLabel" aria-hidden="true">
@@ -162,7 +162,7 @@
 	</div>
 
 	<!-- 尾部 -->
-	<footer class="bg-dark" th:fragment="footer">
+	<footer class="bg-dark">
 		<div class="container">
 			<div class="row">
 				<!-- 二维码 -->
@@ -231,4 +231,3 @@
 <script th:src="@{js/index.js}"></script>
 </body>
 </html>
-
